--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "hbs": "^4.2.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "postman-request": "^2.88.1-postman.32"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/testing.js -e js,hbs,css"
+    "dev": "nodemon ./src/testing.js -e js,hbs,css,html"
   },
   "author": "RaviGajul",
   "license": "ISC",
