--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/testing.js -e js,hbs,css,html"
+    "dev": "nodemon ./src/testing.js -e js,hbs,css,html",
+    "debug": "nodemon --inspect ./src/testing.js -e js,hbs,css,html"
   },
   "author": "RaviGajul",
   "license": "ISC",
